seaqt/QtMultimedia/gen_qmediaplayer.nim


proc fcQMediaPlayer_new(): ptr cQMediaPlayer {.importc: "QMediaPlayer_new".}
proc fcQMediaPlayer_new2(parent: pointer): ptr cQMediaPlayer {.importc: "QMediaPlayer_new2".}
proc fcQMediaPlayer_new3(parent: pointer, flags: cint): ptr cQMediaPlayer {.importc: "QMediaPlayer_new3".}
proc fcQMediaPlayer_metaObject(self: pointer, ): pointer {.importc: "QMediaPlayer_metaObject".}
proc fcQMediaPlayer_metacast(self: pointer, param1: cstring): pointer {.importc: "QMediaPlayer_metacast".}
proc fcQMediaPlayer_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMediaPlayer_metacall".}
proc fcQMediaPlayer_tr(s: cstring): struct_miqt_string {.importc: "QMediaPlayer_tr".}
proc fcQMediaPlayer_trUtf8(s: cstring): struct_miqt_string {.importc: "QMediaPlayer_trUtf8".}
proc fcQMediaPlayer_hasSupport(mimeType: struct_miqt_string): cint {.importc: "QMediaPlayer_hasSupport".}
proc fcQMediaPlayer_supportedMimeTypes(): struct_miqt_array {.importc: "QMediaPlayer_supportedMimeTypes".}
proc fcQMediaPlayer_setVideoOutput(self: pointer, surface: pointer): void {.importc: "QMediaPlayer_setVideoOutput".}
proc fcQMediaPlayer_setVideoOutputWithSurfaces(self: pointer, surfaces: struct_miqt_array): void {.importc: "QMediaPlayer_setVideoOutputWithSurfaces".}
proc fcQMediaPlayer_media(self: pointer, ): pointer {.importc: "QMediaPlayer_media".}
proc fcQMediaPlayer_mediaStream(self: pointer, ): pointer {.importc: "QMediaPlayer_mediaStream".}
proc fcQMediaPlayer_playlist(self: pointer, ): pointer {.importc: "QMediaPlayer_playlist".}
proc fcQMediaPlayer_currentMedia(self: pointer, ): pointer {.importc: "QMediaPlayer_currentMedia".}
proc fcQMediaPlayer_state(self: pointer, ): cint {.importc: "QMediaPlayer_state".}
proc fcQMediaPlayer_mediaStatus(self: pointer, ): cint {.importc: "QMediaPlayer_mediaStatus".}
proc fcQMediaPlayer_duration(self: pointer, ): clonglong {.importc: "QMediaPlayer_duration".}
proc fcQMediaPlayer_position(self: pointer, ): clonglong {.importc: "QMediaPlayer_position".}
proc fcQMediaPlayer_volume(self: pointer, ): cint {.importc: "QMediaPlayer_volume".}
proc fcQMediaPlayer_isMuted(self: pointer, ): bool {.importc: "QMediaPlayer_isMuted".}
proc fcQMediaPlayer_isAudioAvailable(self: pointer, ): bool {.importc: "QMediaPlayer_isAudioAvailable".}
proc fcQMediaPlayer_isVideoAvailable(self: pointer, ): bool {.importc: "QMediaPlayer_isVideoAvailable".}
proc fcQMediaPlayer_bufferStatus(self: pointer, ): cint {.importc: "QMediaPlayer_bufferStatus".}
proc fcQMediaPlayer_isSeekable(self: pointer, ): bool {.importc: "QMediaPlayer_isSeekable".}
proc fcQMediaPlayer_playbackRate(self: pointer, ): float64 {.importc: "QMediaPlayer_playbackRate".}
proc fcQMediaPlayer_error(self: pointer, ): cint {.importc: "QMediaPlayer_error".}
proc fcQMediaPlayer_errorString(self: pointer, ): struct_miqt_string {.importc: "QMediaPlayer_errorString".}
proc fcQMediaPlayer_currentNetworkConfiguration(self: pointer, ): pointer {.importc: "QMediaPlayer_currentNetworkConfiguration".}
proc fcQMediaPlayer_availability(self: pointer, ): cint {.importc: "QMediaPlayer_availability".}
proc fcQMediaPlayer_audioRole(self: pointer, ): cint {.importc: "QMediaPlayer_audioRole".}
proc fcQMediaPlayer_setAudioRole(self: pointer, audioRole: cint): void {.importc: "QMediaPlayer_setAudioRole".}
proc fcQMediaPlayer_supportedAudioRoles(self: pointer, ): struct_miqt_array {.importc: "QMediaPlayer_supportedAudioRoles".}
proc fcQMediaPlayer_customAudioRole(self: pointer, ): struct_miqt_string {.importc: "QMediaPlayer_customAudioRole".}
proc fcQMediaPlayer_setCustomAudioRole(self: pointer, audioRole: struct_miqt_string): void {.importc: "QMediaPlayer_setCustomAudioRole".}
proc fcQMediaPlayer_supportedCustomAudioRoles(self: pointer, ): struct_miqt_array {.importc: "QMediaPlayer_supportedCustomAudioRoles".}
proc fcQMediaPlayer_play(self: pointer, ): void {.importc: "QMediaPlayer_play".}
proc fcQMediaPlayer_pause(self: pointer, ): void {.importc: "QMediaPlayer_pause".}
proc fcQMediaPlayer_stop(self: pointer, ): void {.importc: "QMediaPlayer_stop".}
proc fcQMediaPlayer_setPosition(self: pointer, position: clonglong): void {.importc: "QMediaPlayer_setPosition".}
proc fcQMediaPlayer_setVolume(self: pointer, volume: cint): void {.importc: "QMediaPlayer_setVolume".}
proc fcQMediaPlayer_setMuted(self: pointer, muted: bool): void {.importc: "QMediaPlayer_setMuted".}
proc fcQMediaPlayer_setPlaybackRate(self: pointer, rate: float64): void {.importc: "QMediaPlayer_setPlaybackRate".}
proc fcQMediaPlayer_setMedia(self: pointer, media: pointer): void {.importc: "QMediaPlayer_setMedia".}
proc fcQMediaPlayer_setPlaylist(self: pointer, playlist: pointer): void {.importc: "QMediaPlayer_setPlaylist".}
proc fcQMediaPlayer_setNetworkConfigurations(self: pointer, configurations: struct_miqt_array): void {.importc: "QMediaPlayer_setNetworkConfigurations".}
proc fcQMediaPlayer_mediaChanged(self: pointer, media: pointer): void {.importc: "QMediaPlayer_mediaChanged".}
proc fcQMediaPlayer_connect_mediaChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_mediaChanged".}
proc fcQMediaPlayer_currentMediaChanged(self: pointer, media: pointer): void {.importc: "QMediaPlayer_currentMediaChanged".}
proc fcQMediaPlayer_connect_currentMediaChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_currentMediaChanged".}
proc fcQMediaPlayer_stateChanged(self: pointer, newState: cint): void {.importc: "QMediaPlayer_stateChanged".}
proc fcQMediaPlayer_connect_stateChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_stateChanged".}
proc fcQMediaPlayer_mediaStatusChanged(self: pointer, status: cint): void {.importc: "QMediaPlayer_mediaStatusChanged".}
proc fcQMediaPlayer_connect_mediaStatusChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_mediaStatusChanged".}
proc fcQMediaPlayer_durationChanged(self: pointer, duration: clonglong): void {.importc: "QMediaPlayer_durationChanged".}
proc fcQMediaPlayer_connect_durationChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_durationChanged".}
proc fcQMediaPlayer_positionChanged(self: pointer, position: clonglong): void {.importc: "QMediaPlayer_positionChanged".}
proc fcQMediaPlayer_connect_positionChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_positionChanged".}
proc fcQMediaPlayer_volumeChanged(self: pointer, volume: cint): void {.importc: "QMediaPlayer_volumeChanged".}
proc fcQMediaPlayer_connect_volumeChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_volumeChanged".}
proc fcQMediaPlayer_mutedChanged(self: pointer, muted: bool): void {.importc: "QMediaPlayer_mutedChanged".}
proc fcQMediaPlayer_connect_mutedChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_mutedChanged".}
proc fcQMediaPlayer_audioAvailableChanged(self: pointer, available: bool): void {.importc: "QMediaPlayer_audioAvailableChanged".}
proc fcQMediaPlayer_connect_audioAvailableChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_audioAvailableChanged".}
proc fcQMediaPlayer_videoAvailableChanged(self: pointer, videoAvailable: bool): void {.importc: "QMediaPlayer_videoAvailableChanged".}
proc fcQMediaPlayer_connect_videoAvailableChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_videoAvailableChanged".}
proc fcQMediaPlayer_bufferStatusChanged(self: pointer, percentFilled: cint): void {.importc: "QMediaPlayer_bufferStatusChanged".}
proc fcQMediaPlayer_connect_bufferStatusChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_bufferStatusChanged".}
proc fcQMediaPlayer_seekableChanged(self: pointer, seekable: bool): void {.importc: "QMediaPlayer_seekableChanged".}
proc fcQMediaPlayer_connect_seekableChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_seekableChanged".}
proc fcQMediaPlayer_playbackRateChanged(self: pointer, rate: float64): void {.importc: "QMediaPlayer_playbackRateChanged".}
proc fcQMediaPlayer_connect_playbackRateChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_playbackRateChanged".}
proc fcQMediaPlayer_audioRoleChanged(self: pointer, role: cint): void {.importc: "QMediaPlayer_audioRoleChanged".}
proc fcQMediaPlayer_connect_audioRoleChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_audioRoleChanged".}
proc fcQMediaPlayer_customAudioRoleChanged(self: pointer, role: struct_miqt_string): void {.importc: "QMediaPlayer_customAudioRoleChanged".}
proc fcQMediaPlayer_connect_customAudioRoleChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_customAudioRoleChanged".}
proc fcQMediaPlayer_errorWithError(self: pointer, error: cint): void {.importc: "QMediaPlayer_errorWithError".}
proc fcQMediaPlayer_connect_errorWithError(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_errorWithError".}
proc fcQMediaPlayer_networkConfigurationChanged(self: pointer, configuration: pointer): void {.importc: "QMediaPlayer_networkConfigurationChanged".}
proc fcQMediaPlayer_connect_networkConfigurationChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_networkConfigurationChanged".}
proc fcQMediaPlayer_bindX(self: pointer, param1: pointer): bool {.importc: "QMediaPlayer_bind".}
proc fcQMediaPlayer_unbind(self: pointer, param1: pointer): void {.importc: "QMediaPlayer_unbind".}
proc fcQMediaPlayer_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaPlayer_tr2".}
proc fcQMediaPlayer_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaPlayer_tr3".}
proc fcQMediaPlayer_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaPlayer_trUtf82".}
proc fcQMediaPlayer_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaPlayer_trUtf83".}
proc fcQMediaPlayer_hasSupport2(mimeType: struct_miqt_string, codecs: struct_miqt_array): cint {.importc: "QMediaPlayer_hasSupport2".}
proc fcQMediaPlayer_hasSupport3(mimeType: struct_miqt_string, codecs: struct_miqt_array, flags: cint): cint {.importc: "QMediaPlayer_hasSupport3".}
proc fcQMediaPlayer_supportedMimeTypes1(flags: cint): struct_miqt_array {.importc: "QMediaPlayer_supportedMimeTypes1".}
proc fcQMediaPlayer_setMedia2(self: pointer, media: pointer, stream: pointer): void {.importc: "QMediaPlayer_setMedia2".}
proc fQMediaPlayer_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QMediaPlayer_virtualbase_metaObject".}
proc fcQMediaPlayer_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_metaObject".}
proc fQMediaPlayer_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QMediaPlayer_virtualbase_metacast".}
proc fcQMediaPlayer_override_virtual_metacast(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_metacast".}
proc fQMediaPlayer_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QMediaPlayer_virtualbase_metacall".}
proc fcQMediaPlayer_override_virtual_metacall(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_metacall".}
proc fQMediaPlayer_virtualbase_availability(self: pointer, ): cint{.importc: "QMediaPlayer_virtualbase_availability".}
proc fcQMediaPlayer_override_virtual_availability(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_availability".}
proc fQMediaPlayer_virtualbase_bind(self: pointer, param1: pointer): bool{.importc: "QMediaPlayer_virtualbase_bind".}
proc fcQMediaPlayer_override_virtual_bindX(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_bind".}
proc fQMediaPlayer_virtualbase_unbind(self: pointer, param1: pointer): void{.importc: "QMediaPlayer_virtualbase_unbind".}
proc fcQMediaPlayer_override_virtual_unbind(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_unbind".}
proc fQMediaPlayer_virtualbase_isAvailable(self: pointer, ): bool{.importc: "QMediaPlayer_virtualbase_isAvailable".}
